Bug 164945 - FILEOPEN RTF Paragraph border line not rendered below empty paragraph in table
Summary: FILEOPEN RTF Paragraph border line not rendered below empty paragraph in table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.8.0 target:25.2.3 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTF-Paragraph
  Show dependency treegraph
 
Reported: 2025-01-29 21:14 UTC by Gabor Kelemen (Collabora)
Modified: 2025-03-13 15:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 (70.07 KB, application/msword)
2025-01-29 21:14 UTC, Gabor Kelemen (Collabora)
Details
The example file in Word and Writer (76.25 KB, image/png)
2025-01-29 21:15 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-01-29 21:14:22 UTC
Created attachment 198871 [details]
Example file from Word 2016

Attached document has some tables and a paragraph style that defines text border.
When opened in Writer, the text border is not drawn for the empty paragraphs in the table and in one case it is drawn in a cell where it is missing in Word.

1. Open attached document
-> in the first table the top left "aaa" cell has three empty cells with the "REF-UNT" style, of which two have border drawn in Word, but none of them has it in Writer.
-> when in the bottom table there is an "a" added to one of these cells, Writer also draws this border.
-> in the right "bbb" column the first "xxx" line should not have underline, yet it has in Writer.

I'm not yet sure what is going on here and why does Word draw / not draw lines.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 43fc662520e5488cbeadd6eb60a24374a837dca4
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

The first issue seems to have been broken in 7.5 with:

https://git.libreoffice.org/core/+/6f42a2c8631bace1caa4fac0b3ea554942f1fca3%5E%21

author	Michael Stahl <michael.stahl@allotropia.de>	Fri Aug 12 14:10:31 2022 +0200
committer	Michael Stahl <michael.stahl@allotropia.de>	Mon Aug 15 11:14:38 2022 +0200

tdf#150382 writerfilter,sw: RTF import of paragraph border override
Comment 1 Gabor Kelemen (Collabora) 2025-01-29 21:15:00 UTC
Created attachment 198872 [details]
The example file in Word and Writer
Comment 2 BogdanB 2025-01-30 19:57:12 UTC
Confirm the Writer behaviour with
Version: 25.2.0.3 (X86_64) / LibreOffice Community
Build ID: e1cf4a87eb02d755bce1a01209907ea5ddc8f069
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2025-03-13 10:39:35 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1a7346e7f14b54cf5d9b74798d41cff2a3a05872

tdf#164945 writerfilter: RTF import: fix erroneous default paragraph...

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-03-13 10:39:37 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/04ef40cb60fd96960004b15b38a56e1141a8de7e

(related: tdf#164945) writerfilter: RTF import: try to fix more cases

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl 2025-03-13 10:47:19 UTC
fixed on master
Comment 6 Commit Notification 2025-03-13 15:43:31 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/30385a6d670365652f7f91c034c2028664206751

tdf#164945 writerfilter: RTF import: fix erroneous default paragraph...

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-03-13 15:44:35 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/9783a5f1add8c9e2e4e2bc4a7891aba8ab085427

tdf#164945 writerfilter: RTF import: fix erroneous default paragraph...

It will be available in 24.8.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.