tdf#164945 writerfilter: RTF import: fix erroneous default paragraph...

... properties in empty table cell.

The problem is that for an empty table cell, there is a sequence of
buffer entries SETSTYLE, PROPS, SETSTYLE, PROPS, and the 2nd PROPS
sets a default value of the LN_CT_PrBase_pBdr SPRM, and that overwrites
the \brdrs value that was contained in the 1st PROPS.

All these buffer entries originate in \cell handler, which must use
ST_StyleType_character when buffering the character properties, then no
paragraph properties will be generated in getProperties() for the 2nd
PROPS.

(regression from commit 6f42a2c8631bace1caa4fac0b3ea554942f1fca3)

Change-Id: Iefb939d8d8dace6dc58cb665b4bd1575f09701c1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182835
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins